--- a/src/views/pages/serenazgos.ejs
+++ b/src/views/pages/serenazgos.ejs
@@ -209,7 +209,7 @@
                             <%= data[i].direccion %>
                         </td>
                         <td class="px-6 py-4">
-                            <button type="button" class="font-medium p-1 rounded hover:bg-gray-200 text-gray-700"><i class="text-red-500 bx bxs-trash"></i></button>
+                            <!-- <button type="button" class="font-medium p-1 rounded hover:bg-gray-200 text-gray-700"><i class="text-red-500 bx bxs-trash"></i></button> -->
                         </td>
                     </tr>
                 <% } %>
