--- a/src/views/pages/alertas.ejs
+++ b/src/views/pages/alertas.ejs
@@ -32,6 +32,9 @@
                 <th scope="col" class="px-6 py-3">
                     Ubicación
                 </th>
+                <th scope="col" class="px-6 py-3">
+                    Imagen
+                </th>
             </tr>
         </thead>
         <tbody>
@@ -46,7 +49,6 @@
                 <% } %>
                     <% if (hasData) { %>
                         <% for( let i=0; i < data.length; i++ ) { %>
-                            
                                 <tr
                                     class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 hover:bg-gray-50 dark:hover:bg-gray-600">
                                     <th scope="row"
@@ -71,65 +73,82 @@
                                         (<%= data[i].vecino.usuario.documentoIdentidad %>) <%= data[i].vecino.usuario.nombres %> <%= data[i].vecino.usuario.apellidoPaterno %> 
                                     </td>
                                     <td class="px-6 py-4">
-                                        <div class="flex" style="min-width: 200px;">
-                                            <button id="btnRefresh_<%=i%>" class="hover:bg-gray-200 rounded" onclick="
-                                                const btnRefresh = document.getElementById('btnRefresh_<%=i%>');
-                                                const txtSerenazgo = document.getElementById('txtSerenazgo_<%=i%>');
-                                                const cbSerenazgos = document.getElementById('cbSerenazgos_<%=i%>');
-                                                const btnSave = document.getElementById('btnSave_<%=i%>');
-
-                                                txtSerenazgo.style.display = 'none';
-                                                cbSerenazgos.style.display = 'block';
-                                                btnSave.style.display = 'block';
-                                                btnRefresh.style.display = 'none';
-
-                                                cbSerenazgos.focus();
-                                                "><i class="text-xl bx bx-refresh"></i></button>
-                                            
-                                            <span id="txtSerenazgo_<%=i%>">
-                                                <% if(data[i].serenazgo) { %>
-                                                    <%= data[i].serenazgo.usuario.nombres %> <%= data[i].serenazgo.usuario.apellidoPaterno %>
-                                                <% } else { %>
-                                                    <span class="text-red-500">Sin asignar</span>
-                                                <% } %>
-                                            </span>
-                                            <select id="cbSerenazgos_<%=i%>" style="display: none;" name="dia" class="block w-full mt-1 rounded-md border-gray-300 shadow-sm focus:border-indigo-300 focus:ring focus:ring-indigo-200 focus:ring-opacity-50">
-                                                <option value="">Seleccionar...</option>
-                                                <% for( let j=0; j < metadata.serenazgos.length; j++ ) { %>
-                                                    <option value="<%= metadata.serenazgos[j].idSerenazgo %>"><%= metadata.serenazgos[j].usuario.nombres %> <%= metadata.serenazgos[j].usuario.apellidoPaterno %></option>
-                                                <% } %>
-                                            </select>     
-                                            <button id="btnSave_<%=i%>" style="display: none;"  class="hover:bg-gray-200 rounded" onclick="
-                                                const btnSaveClick = async () => {
+                                        <% if(data[i].estadoAlerta == 'P' || data[i].estadoAlerta == 'A' ) { %>
+                                            <div class="flex" style="min-width: 150px;">
+                                                <button id="btnRefresh_<%=i%>" class="hover:bg-gray-200 rounded" onclick="
+                                                    const btnRefresh = document.getElementById('btnRefresh_<%=i%>');
                                                     const txtSerenazgo = document.getElementById('txtSerenazgo_<%=i%>');
                                                     const cbSerenazgos = document.getElementById('cbSerenazgos_<%=i%>');
                                                     const btnSave = document.getElementById('btnSave_<%=i%>');
-                                                    const btnRefresh = document.getElementById('btnRefresh_<%=i%>');
 
-                                                    const selectedSerenazgo = cbSerenazgos.options[cbSerenazgos.selectedIndex].value;
+                                                    txtSerenazgo.style.display = 'none';
+                                                    cbSerenazgos.style.display = 'block';
+                                                    btnSave.style.display = 'block';
+                                                    btnRefresh.style.display = 'none';
 
-                                                    if(selectedSerenazgo && selectedSerenazgo>0){
-                                                        await fetch('/api/v1/alertas/<%= data[i].idAlerta%>/sereno', {
-                                                            method: 'PUT',
-                                                            headers: {
-                                                                'Content-Type': 'application/json'
-                                                            },
-                                                            body: JSON.stringify({ serenazgo: {idSerenazgo: selectedSerenazgo} })
-                                                        });
-                                                        window.location.reload();
-                                                    }
-                                                };
+                                                    cbSerenazgos.focus();
+                                                    "><i class="text-xl bx bx-refresh"></i></button>
                                                 
-                                                btnSaveClick();
-                                            "><i class="text-xl bx bx-save"></i></button> 
-                                        </div>
+                                                <span id="txtSerenazgo_<%=i%>">
+                                                    <% if(data[i].serenazgo) { %>
+                                                        <%= data[i].serenazgo.usuario.nombres %> <%= data[i].serenazgo.usuario.apellidoPaterno %>
+                                                    <% } else { %>
+                                                        <span class="text-red-500">Sin asignar</span>
+                                                    <% } %>
+                                                </span>
+                                                <select id="cbSerenazgos_<%=i%>" style="display: none;" name="dia" class="block w-full mt-1 rounded-md border-gray-300 shadow-sm focus:border-indigo-300 focus:ring focus:ring-indigo-200 focus:ring-opacity-50">
+                                                    <option value="">Seleccionar...</option>
+                                                    <% for( let j=0; j < metadata.serenazgos.length; j++ ) { %>
+                                                        <option value="<%= metadata.serenazgos[j].idSerenazgo %>"><%= metadata.serenazgos[j].usuario.nombres %> <%= metadata.serenazgos[j].usuario.apellidoPaterno %></option>
+                                                    <% } %>
+                                                </select>     
+                                                <button id="btnSave_<%=i%>" style="display: none;"  class="hover:bg-gray-200 rounded" onclick="
+                                                    const btnSaveClick = async () => {
+                                                        const txtSerenazgo = document.getElementById('txtSerenazgo_<%=i%>');
+                                                        const cbSerenazgos = document.getElementById('cbSerenazgos_<%=i%>');
+                                                        const btnSave = document.getElementById('btnSave_<%=i%>');
+                                                        const btnRefresh = document.getElementById('btnRefresh_<%=i%>');
+
+                                                        const selectedSerenazgo = cbSerenazgos.options[cbSerenazgos.selectedIndex].value;
+
+                                                        if(selectedSerenazgo && selectedSerenazgo>0){
+                                                            await fetch('/api/v1/alertas/<%= data[i].idAlerta%>/sereno', {
+                                                                method: 'PUT',
+                                                                headers: {
+                                                                    'Content-Type': 'application/json'
+                                                                },
+                                                                body: JSON.stringify({ serenazgo: {idSerenazgo: selectedSerenazgo} })
+                                                            });
+                                                            window.location.reload();
+                                                        }
+                                                    };
+                                                    
+                                                    btnSaveClick();
+                                                "><i class="text-xl bx bx-save"></i></button> 
+                                            </div>
+                                        <% } %>
+                                        <% if(data[i].estadoAlerta != 'P' && data[i].estadoAlerta != 'A') { %>
+                                            <% if(data[i].serenazgo) { %>
+                                                <%= data[i].serenazgo.usuario.nombres %> <%= data[i].serenazgo.usuario.apellidoPaterno %>
+                                            <% } else { %>
+                                                <span class="text-red-500">Sin asignar</span>
+                                            <% } %>
+                                        <% } %>
                                         
                                     </td>
                                     <td class="px-6 py-4">
-                                        <%= data[i].categoria.nombre %>
+                                        <% if(data[i].categoria) { %>
+                                            <%= data[i].categoria.nombre %>
+                                        <% } else {%>
+                                            <span class="text-red-500">Sin asignar</span>
+                                        <% } %>
                                     </td>
                                     <td class="px-6 py-4">
-                                        <%= data[i].subcategoria.nombre %>
+                                        <% if(data[i].subcategoria) { %>
+                                            <%= data[i].subcategoria.nombre %>
+                                        <% } else {%>
+                                            <span class="text-red-500">Sin asignar</span>
+                                        <% } %>
                                     </td>
                                     <td class="px-6 py-4">
                                         <%= data[i].subsector.sector.nombre %>
@@ -141,8 +160,13 @@
                                         <%= data[i].descripcion %>
                                     </td>
                                     <td class="px-6 py-4">
-                                        <% if(data[i].latitud && data[i].longitud) { %>
+                                        <% if(data[i].latitud  && data[i].longitud && data[i].latitud.length > 3  && data[i].longitud.length > 3 )   { %>
                                             <a href="https://www.google.com/maps/search/?api=1&query=<%= data[i].latitud %>,<%= data[i].longitud %>" target="_blank" class="text-blue-500 hover:text-blue-600">Google Map</a>
+                                        <% } %>
+                                    </td>
+                                    <td class="px-6 py-4">
+                                        <% if(data[i].imagenBase64 ) { %>
+                                            <img src="data:image/png;base64,<%= data[i].imagenBase64 %>" alt="Imagen">
                                         <% } %>
                                     </td>
                                 </tr>
