--- a/src/views/pages/home.ejs
+++ b/src/views/pages/home.ejs
@@ -2,6 +2,17 @@
     <!-- <p class="text-2xl mb-6">Bienvenido a la página principal.</p> -->
 
     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6">
+        <div class="bg-pink-500 text-white p-6 rounded-lg shadow-lg cursor-pointer hover:bg-pink-600">
+            <a href="/alertas">
+                <div class="text-center">
+                    <div class="text-4xl mb-4">
+                        <i class="bx bxs-bell"></i>
+                    </div>
+                    <h2 class="text-xl font-bold">Alertas</h2>
+                    <p class="mt-2">Gestionar las alertas</p>
+                </div>
+            </a>
+        </div>
         <div class="bg-blue-500 text-white p-6 rounded-lg shadow-lg cursor-pointer hover:bg-blue-600">
             <a href="/vecinos">
                 <div class="text-center">
