--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -20,7 +20,7 @@
       <div x-show="dropdownOpen" @click.away="dropdownOpen = false"
         class="absolute right-0 mt-2 w-48 bg-white rounded-md shadow-lg overflow-hidden z-20">
         <!-- <a href="mi-perfil" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100">Mi Perfil</a> -->
-        <a id="btn-logout" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100">Cerrar Sesión</a>
+        <a id="btn-logout" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100" href="/login">Cerrar Sesión</a>
       </div>
     </div>
   </div>
